--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -153,6 +153,13 @@
              </layout>
             </item>
             <item>
+             <widget class="QCheckBox" name="useStabilityThresholdForKnownMorphsCheckBox">
+              <property name="text">
+               <string>Use FSRS card stability instead of card interval for known threshold</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QCheckBox" name="recalcReadKnownMorphsFolderCheckBox">
               <property name="text">
                <string>Read files in 'known-morphs' folder and register morphs as known</string>
