--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -354,7 +354,12 @@
            </column>
            <column>
             <property name="text">
-             <string>Field</string>
+             <string>Read Field</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Modify Field</string>
             </property>
            </column>
            <column>
